# wplace-auto-painter-pw

./: .gitignore  LICENSE  README.md  build.spec  config-gui.spec  config_init_gui.py  gui_main.py  main.py  prek.toml  pyproject.toml  ruff.toml  wplace-auto-painter.spec
.github/workflows/: build.yml
app/: ansi_image.py  assets.py  browser.py  config.py  const.py  consts.py  exception.py  highlight.py  log.py  page.py  paint.py  painter.py  preview.py  pumpkin.py  purchase.py  resolver.py  schemas.py  template.py  toast.py  tray.py  update.py  utils.py
app/assets/: .config.schema.json  page_init.js  paint_btn.js  paint_map.js
app/assets/js/: page_init.js  paint_btn.js
app/assets/locales/: en_US.json  zh_CN.json
app/browser/: __init__.py  const.py  install.py  manager.py
app/events/: christmas.py  hallowen.py  pumpkin.py
app/gui/: __init__.py  controller.py  i18n.py  log_viewer.py  logging_bridge.py  main_window.py  runtime.py  state.py  tool_row.py  tray_icon.py
app/gui/config/: __init__.py  area_editor_dialog.py  constants.py  editor.py  image_drop_label.py  preferred_colors.py  user_draft.py
app/gui/locales/: zh_CN.json
app/gui/logging/: __init__.py  log_viewer.py  (+1 more)
app/schemas/: __init__.py  coords.py  template.py  user.py  wplace.py
app/utils/: __init__.py  ansi_image.py  ansi_qt.py  color.py  coords.py  func.py  highlight.py  toast.py  update.py
app/wplace/: __init__.py  fingerprint.py  page.py  paint.py  purchase.py  resolver.py  schemas.py  template.py
gui/: __init__.py  __main__.py  config.py  image.py  user.py  window.py
(+7 files in other folders)
