[project]
name = "wplace-auto-painter-pw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.11.0",
    "bot7685-ext>=0.1.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "playwright==1.55.0",
    "pydantic>=2.12.3",
    "pyqt6>=6.10.0",
    "tarina>=0.7.3",
]

[tool.ruff]
line-length = 120
